# bioscart-minimal

./: .gitignore  README.md  __init__.py  __main__.py  _show_radiomics.py  aggregate_dose.py  cli.py  dicom_io.py  dose_evaluation.py  errors.py  geometry.py  ice3_bridge.py  objectives.py  pyproject.toml  pyradiomics_params.yaml  radiomics_runner.py  recommendations.py  regions.py  rtdose_exporter.py  rtstruct_exporter.py  run_batch.py  service.py  sfrt_dose_logic.py
tests/: conftest.py  test_cli.py  test_dicom_io.py  test_dose_evaluation.py  test_geometry.py  test_objectives.py  test_radiomics_runner.py  test_recommendations.py  test_regions.py  test_rtdose_exporter.py  test_rtstruct_exporter.py  test_sfrt_dose_logic.py
